# 2D-RPG

./: README.md
data/: map.xml  res.xml  sounds.xml
proj.cmake/: CMakeLists.txt  build_emsc.bat  build_emsc_release.bat  run.sh
proj.cmake/oxygine-sound-master/proj.win32/: oxygine-sound.vcxproj
proj.macosx/2D-RPG_macosx.xcodeproj/: project.pbxproj
proj.macosx/2D-RPG_macosx.xcodeproj/project.xcworkspace/xcuserdata/miriamcostan.xcuserdatad/: UserInterfaceState.xcuserstate
proj.macosx/2D-RPG_macosx.xcodeproj/xcuserdata/miriamcostan.xcuserdatad/xcschemes/: 2D-RPG_macosx.xcscheme  xcschememanagement.plist
proj.win32/: 2D-RPG.sln  2D-RPG.vcxproj  2D-RPG.vcxproj.filters
proj.win32/Debug_v140_xp/: 2D-RPG.vcxprojResolveAssemblyReference.cache  oxygine-sound.lib  vc140.idb
proj.win32/Debug_v140_xp/2D-RPG.tlog/: 2D-RPG.lastbuildstate  CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.write.1.tlog
src/: Character.cpp  Character.h  CharactersContactListener.cpp  CharactersContactListener.h  Entity.cpp  Entity.h  Environment.cpp  Environment.h  Game.cpp  Game.h  Hero.cpp  Hero.h  MainActor.cpp  MainActor.h  Map.cpp  Map.h  Mob.cpp  Mob.h  Plant.cpp  Plant.h  SpecialEnvironment.cpp  SpecialEnvironment.h  SpecialPlant.cpp  SpecialPlant.h  Text.cpp  Text.h  Utils.cpp  Utils.h  main.cpp  res.cpp  res.h  snd.cpp  snd.h
